# jenkins-learning

./: Jenkinsfile  pyproject.toml
tests/: test_string_adder.py
utils/: interface.py  strings.py
